agregar archivo index html al repositorio

--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
             sequi error optio quo qui dignissimos non quidem quae! Quibusdam cumque omnis aliquid!
         </p>
     </section>
+    <section class="habilidades" id="habilidades">
+        <h2>Mis habilidades</h2>
+        <div class="contenedor-habilidades">
+            <img src="" alt="Icono1" loading="lazy" class="icon icon-card"> <!--El atributo loading en lazy permite que las imagenes se carguen solo cuando el usuario se desplace a la seccion que las contiene-->
+            <img src="" alt="Icono2" loading="lazy" class="icon icon-card">
+            <img src="" alt="Icono3" loading="lazy" class="icon icon-card">
+        </div>
+    </section>
     
     <script src="assets/js/app.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
