cambio realizado en el documento html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </p>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. In doloribus est, assumenda ad facilis unde deserunt quisquam 
-            sequi error optio quo qui dignissimos non quidem quae! Quibusdam cumque omnis aliquid!
+            sequi error optio quo qui dignissimos non quidem quae! Quibusdam cumque omnis aliquidvxcvfsdfdsxcvx!
         </p>
     </section>
     <section class="habilidades" id="habilidades">
