cambios realizados en el html y css

--- a/index.html
+++ b/index.html
@@ -57,6 +57,29 @@
             <img src="" alt="Icono3" loading="lazy" class="icon icon-card">
         </div>
     </section>
+    <section class="proyectos" id="proyectos">
+        <h2>Mis proyectos recientes</h2>
+        <div class="contenedor-proyectos">
+            <div class="contenedor-proyectos-in tarjeta-proyectos">
+                <img src="" alt="imagen1" loading="lazy" class="foto-proyecto">
+                <h3 class="titulo-proyecto">Nombre de proyecto 1</h3>
+                <p class="descripcion-proyecto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam eaque ex quia a dolorum harum incidunt nostrum et, vel provident eos repellendus ea nulla nemo qui, animi ipsa quibusdam laboriosam.</p>
+                <a href="#" class="enlace-proyecto">Check it out.</a>
+            </div>
+            <div class="contenedor-proyectos-in tarjeta-proyectos">
+                <img src="" alt="imagen2" loading="lazy" class="foto-proyecto">
+                <h3 class="titulo-proyecto">Nombre de proyecto 2</h3>
+                <p class="descripcion-proyecto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam eaque ex quia a dolorum harum incidunt nostrum et, vel provident eos repellendus ea nulla nemo qui, animi ipsa quibusdam laboriosam.</p>
+                <a href="#" class="enlace-proyecto">Check it out.</a>
+            </div>
+            <div class="contenedor-proyectos-in tarjeta-proyectos">
+                <img src="" alt="imagen3" loading="lazy" class="foto-proyecto">
+                <h3 class="titulo-proyecto">Nombre de proyecto 3</h3>
+                <p class="descripcion-proyecto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam eaque ex quia a dolorum harum incidunt nostrum et, vel provident eos repellendus ea nulla nemo qui, animi ipsa quibusdam laboriosam.</p>
+                <a href="#" class="enlace-proyecto">Check it out.</a>
+            </div>
+        </div>
+    </section>
     
     <script src="assets/js/app.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
