--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
             <li><a href="#sobremi" class="nav-link">Acerca de Mi</a></li>
             <li><a href="#habilidades" class="nav-link">Habilidades</a></li>
             <li><a href="#proyectos" class="nav-link">Proyectos</a></li>
-            <li><a href="#contact" class="nav-link">Contacto</a></li>
+            <li><a href="#contacto" class="nav-link">Contacto</a></li>
         </ul>
         <button class="menu-button" id="menu-button">
             <ion-icon class="barras" name="menu-outline"></ion-icon>
         </button>
     </nav>
     <section class="sobremi" id="sobremi">
-        <img src="public/character 18.png" alt="imagen de avatar" loading="lazy" class="sobremi-img">
+        <img src="public/bio-img.png" alt="imagen de avatar" loading="lazy" class="sobremi-img">
         <div class="bio animate__animated animate__shakeX">
             <h2 class="bio-titulo">Sobre Mí</h2>
             <p class="bio-texto">
@@ -35,56 +35,64 @@
     </section>
     <section class="mas-sobre">
         <h2>Mas sobre mí</h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quibusdam ab cumque, voluptates, 
-            iure optio laudantium magnam dicta esse facilis blanditiis. Quisquam minima, molestias nesciunt ad amet numquam quam. Maiores?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum aspernatur voluptates praesentium harum. Id sapiente molestias fugit quia dolores, 
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam optio corrupti vel ab aspernatur atque ducimus dolorum 
-            qui id possimus quis voluptas facilis ipsa, rem alias. Sint atque possimus quisoiuertu!
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. In doloribus est, assumenda ad facilis unde deserunt quisquam 
-            sequi error optio quo qui dignissimos non quidem quae! Quibusdam cumque omnis aliquidvxcvfsdfdsxcvx!
-        </p>
+        <div class="mas-sobre-container">
+            <img src="public/game-img.png" alt="">
+            <div class="mas-sobre-p-container">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quibusdam ab cumque, voluptates, 
+                    iure optio laudantium magnam dicta esse facilis blanditiis. Quisquam minima, molestias nesciunt ad amet numquam quam. Maiores?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum aspernatur voluptates praesentium harum. Id sapiente molestias fugit quia dolores, 
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam optio corrupti vel ab aspernatur atque ducimus dolorum 
+                    qui id possimus quis voluptas facilis ipsa, rem alias. Sint atque possimus quisoiuertu!
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. In doloribus est, assumenda ad facilis unde deserunt quisquam 
+                    sequi error optio quo qui dignissimos non quidem quae! Quibusdam cumque omnis aliquidvxcvfsdfdsxcvx!
+                </p>
+             </div>
+        </div>
     </section>
     <section class="habilidades" id="habilidades">
-        <h2>Mis habilidades</h2>
         <div class="contenedor-habilidades">
-            <img src="" alt="Icono1" loading="lazy" class="icon icon-card"> <!--El atributo loading en lazy permite que las imagenes se carguen solo cuando el usuario se desplace a la seccion que las contiene-->
-            <img src="" alt="Icono2" loading="lazy" class="icon icon-card">
-            <img src="" alt="Icono3" loading="lazy" class="icon icon-card">
+        <div class="hab-cont">
+        <h2>Mis habilidades</h2>
+        <div class="contenedor-tarjet-habilidades">
+            <img src="public/html-icon.png" alt="Icono1" loading="lazy" class="icon icon-card"> <!--El atributo loading en lazy permite que las imagenes se carguen solo cuando el usuario se desplace a la seccion que las contiene-->
+            <img src="public/css-icon.png" alt="Icono2" loading="lazy" class="icon icon-card">
+            <img src="public/js-icon.png" alt="Icono3" loading="lazy" class="icon icon-card">
+        </div>
         </div>
     </section>
     <section class="proyectos" id="proyectos">
         <h2>Mis proyectos recientes</h2>
         <div class="contenedor-proyectos">
             <div class="contenedor-proyectos-in tarjeta-proyectos">
-                <img src="" alt="imagen1" loading="lazy" class="foto-proyecto">
-                <h3 class="titulo-proyecto">Nombre de proyecto 1</h3>
+                <a href="#" target="_blank"><img src="public/netflix-img.jpg" alt="imagen1" loading="lazy" class="foto-proyecto"></a>
+                <h3 class="titulo-proyecto"><a>Nombre de proyecto 1</a></h3>
                 <p class="descripcion-proyecto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam eaque ex quia a dolorum harum incidunt nostrum et, vel provident eos repellendus ea nulla nemo qui, animi ipsa quibusdam laboriosam.</p>
-                <a href="#" class="enlace-proyecto">Check it out.</a>
+
             </div>
             <div class="contenedor-proyectos-in tarjeta-proyectos">
-                <img src="" alt="imagen2" loading="lazy" class="foto-proyecto">
-                <h3 class="titulo-proyecto">Nombre de proyecto 2</h3>
+                <a href="#" target="_blank"><img src="public/hollow-img.jpg" alt="imagen2" loading="lazy" class="foto-proyecto"></a>
+                <h3 class="titulo-proyecto"><a>Nombre de proyecto 2</a></h3>
                 <p class="descripcion-proyecto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam eaque ex quia a dolorum harum incidunt nostrum et, vel provident eos repellendus ea nulla nemo qui, animi ipsa quibusdam laboriosam.</p>
-                <a href="#" class="enlace-proyecto">Check it out.</a>
             </div>
             <div class="contenedor-proyectos-in tarjeta-proyectos">
-                <img src="" alt="imagen3" loading="lazy" class="foto-proyecto">
-                <h3 class="titulo-proyecto">Nombre de proyecto 3</h3>
-                <p class="descripcion-proyecto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam eaque ex quia a dolorum harum incidunt nostrum et, vel provident eos repellendus ea nulla nemo qui, animi ipsa quibusdam laboriosam.</p>
-                <a href="#" class="enlace-proyecto">Check it out.</a>
+                <a href="#" target="_blank"><img src="public/cyberpunk-img.jpg" alt="imagen3" loading="lazy" class="foto-proyecto"></a>
+                <h3 class="titulo-proyecto"><a>Nombre de proyecto 3</a></h3>
+               <p class="descripcion-proyecto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam eaque ex quia a dolorum harum incidunt nostrum et, vel provident eos repellendus ea nulla nemo qui, animi ipsa quibusdam laboriosam.</p>
+                
             </div>
         </div>
+    </div>
     </section>
     <section class="contacto" id="contacto">
-        <h2>Contactame</h2>
+        <h2>Contacto</h2>
         <div class="contenedor-contacto">
             <div class="contenedor-mapa">
-                <div style="max-width:100%;overflow:hidden;color:red;width:500px;height:500px;">
+                <div style="max-width:100%;overflow:hidden;color:red;width:37rem;height:27rem;">
                     <div id="google-maps-display" style="height:100%; width:100%;max-width:100%;">
                         <iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Rafaela,+Santa+Fe,+Argentina&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe>
                     </div>
@@ -115,6 +123,9 @@
         </div> 
         </div>
     </section>
+    <footer>
+        <p>by Lucas Durán</p>
+    </footer>
     
     <script src="assets/js/app.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
