se realizaron cambios en html, css y js

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="#contacto" class="nav-link">Contacto</a></li>
         </ul>
         <button class="menu-button" id="menu-button">
-            <ion-icon class="barras" name="menu-outline"></ion-icon>
+            <ion-icon class="barras" name="menu-outline" id="menu-burger"></ion-icon>
         </button>
     </nav>
     <section class="sobremi" id="sobremi">
@@ -32,6 +32,7 @@
                 dolores cupiditate numquam voluptates quidem, laboriosam quas aperiam excepturi ducimus cum incidunt voluptas consectetur rem!
             </p>
         </div>
+
     </section>
     <section class="mas-sobre">
         <h2>Mas sobre mí</h2>
