se agrego información en la biografia

--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
         <div class="bio animate__animated animate__shakeX">
             <h2 class="bio-titulo">Sobre Mí</h2>
             <p class="bio-texto">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa quas distinctio sint numquam, dolorum in eligendi. 
-                Provident aliquid modi, nisi quia ex quas, facere, enim quis vero non dolorum odio.
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui molestiae reiciendis voluptate nam dicta facilis, 
-                dolores cupiditate numquam voluptates quidem, laboriosam quas aperiam excepturi ducimus cum incidunt voluptas consectetur rem!
+                Mi nombre es Lucas Durán. Tengo 20 años y vivo en Rafaela. Actualmente soy estudiante de la Lic. en Producción de videojuegos y Entretenimiento digital en la Unraf.
             </p>
         </div>
 
@@ -40,17 +37,15 @@
             <img src="public/game-img.png" alt="">
             <div class="mas-sobre-p-container">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quibusdam ab cumque, voluptates, 
-                    iure optio laudantium magnam dicta esse facilis blanditiis. Quisquam minima, molestias nesciunt ad amet numquam quam. Maiores?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum aspernatur voluptates praesentium harum. Id sapiente molestias fugit quia dolores, 
+                    Además de estudiar en la universidad, paralelamente estudio por mi cuenta programación y desarollo web. Actualmente estoy aprendiendo Java y HTML y CSS.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam optio corrupti vel ab aspernatur atque ducimus dolorum 
-                    qui id possimus quis voluptas facilis ipsa, rem alias. Sint atque possimus quisoiuertu!
+                    Tengo facilidad para aprender cosas nuevas y me adapto bien a difentes situaciones. Soy una persona bastante perfeccionista y proactiva a la hora de resolver problemas.
+                    También me gusta trabajar en equipo e interactuar con otras personas para compartir diferentes ideas o puntos de vista.
+                    Me gusta aprender nuevas habilidades constantemente y adquirir nuevos conocimientos.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. In doloribus est, assumenda ad facilis unde deserunt quisquam 
-                    sequi error optio quo qui dignissimos non quidem quae! Quibusdam cumque omnis aliquidvxcvfsdfdsxcvx!
+                    Soy un apasionado de la música, el cine y los videojuegos. En mis tiempos libres me gusta componer y producir musica de diversos géneros.
                 </p>
              </div>
         </div>
